Resolve TODOs in final report

--- a/docs/finalreport/index.bib
+++ b/docs/finalreport/index.bib
@@ -151,6 +151,9 @@
   title={Qualified types: theory and practice},
   author={Jones, Mark P},
   number={9},
+  isbn={9780521543262},
+  lccn={lc94028540},
+  series={Distinguished Dissertations in Computer Science},
   year={2003},
   publisher={Cambridge University Press}
 }
@@ -283,4 +286,11 @@
   author={Heeren, Bastiaan J},
   year={2005},
   publisher={Utrecht University}
+}
+
+@thesis{ref36,
+  title={Statically typed programming languages in the JavaScript ecosystem: A type system perspective},
+  author={Mikkonen, Juuso},
+  type={Master's Thesis},
+  year={2019}
 }
