--- a/docs/finalreport/index.bib
+++ b/docs/finalreport/index.bib
@@ -294,3 +294,33 @@
   type={Master's Thesis},
   year={2019}
 }
+
+@inproceedings{ref37,
+  title={Heuristic evaluation of user interfaces},
+  author={Nielsen, Jakob and Molich, Rolf},
+  booktitle={Proceedings of the SIGCHI conference on Human factors in computing systems},
+  pages={249--256},
+  year={1990}
+}
+
+@article{ref38,
+  title={Complete and easy bidirectional typechecking for higher-rank polymorphism},
+  author={Dunfield, Joshua and Krishnaswami, Neelakantan R},
+  journal={ACM SIGPLAN Notices},
+  volume={48},
+  number={9},
+  pages={429--442},
+  year={2013},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{ref39,
+  title={Local type inference},
+  author={Pierce, Benjamin C and Turner, David N},
+  journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
+  volume={22},
+  number={1},
+  pages={1--44},
+  year={2000},
+  publisher={ACM New York, NY, USA}
+}
